fixed spacing

--- a/src/pages/DayCream/DayCream.css
+++ b/src/pages/DayCream/DayCream.css
@@ -57,13 +57,13 @@
 .breadcrumb {
   display: flex;
   padding: 0.625rem;
-  margin: 8.75rem 0 0 3.12rem;
-  gap: 0.625rem;
+  margin: 8.75rem 0 1.25rem 3.12rem;
 }
 
 .breadcrumb ol {
   list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
   align-items: center;
 }
@@ -165,9 +165,7 @@
   align-items: center;
   width: 40.125rem;
   gap: 0.99844rem;
-  margin-top: 1.38rem;
-  margin-left: 3.12rem;
-  margin-right: 2.31rem;
+  margin: 1.38rem 2.31rem 0 3.12rem;
 }
 
 .thumbnail {
@@ -197,8 +195,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-right: 7.31rem;
-  margin-top: 13.84rem;
+  margin: 13.84rem 7.31rem 0 0;
 }
 
 .product-info {
@@ -220,6 +217,7 @@
 .price {
   text-align: right;
   font-size: var(--font-size-medium);
+  font-weight: 600;
 }
 
 .product-ingredients,
@@ -237,6 +235,7 @@
   align-self: flex-end;
   gap: 1.23513rem;
   font-size: var(--font-size-medium);
+  font-weight: 600;
   margin-bottom: 1.25rem;
 }
 
@@ -252,7 +251,7 @@
 .size {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.33688rem;
 }
 
 .learn-more-button {
@@ -286,8 +285,7 @@
 }
 
 .product-reviews h2 {
-  margin-bottom: 1.25rem;
-  margin-left: 7.37rem;
+  margin: 0 0 1.25rem 8.4rem;
 }
 
 .review {
@@ -353,8 +351,6 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  width: 1.25rem;
-  height: 2.375rem;
 }
 
 .carousel-arrow.prev {
@@ -374,8 +370,7 @@
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  margin-top: 4.31rem;
-  margin-bottom: 4.31rem;
+  margin: 4.31rem 0 3rem;
 }
 
 .review-dot {
